--- a/scss/_elements.scss
+++ b/scss/_elements.scss
@@ -7,6 +7,7 @@ body {
   color: var(--color-text);
   font-family: var(--font-family);
   word-wrap: break-word;
+  font-smooth: always;
 }
 
 /* Headings */
