--- a/editor-style.css
+++ b/editor-style.css
@@ -427,6 +427,10 @@ template {
   display: none;
 }
 
+body {
+  margin: var(--spacing);
+}
+
 /* Elements */
 :root {
   font-size: var(--font-size);
