--- a/scss/content/_media.scss
+++ b/scss/content/_media.scss
@@ -25,8 +25,32 @@ object {
   font-size: .8rem;  
 }
 
+.wp-caption,
+.gallery-item {
+  background-color: #FFFFFF;
+  padding: calc(var(--spacing) * 0.5);
+  box-shadow: var(--shadow);
+  border-radius: .25em;
+
+  img {
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .wp-caption {
   max-width: calc(100% - 1em);
+}
+
+.wp-caption-text {
+  text-align: center;
+  font-style: italic;
+  font-weight: 500;
+  padding: calc(var(--spacing) * 0.5);
+  padding-bottom: 0;
+  color: #000000;
 }
 
 figure {
