--- a/scss/_site-footer.scss
+++ b/scss/_site-footer.scss
@@ -25,8 +25,8 @@
   cursor: pointer;
   width: 30px;
   height: 30px;
-  border-radius: 2px;
   overflow: hidden;
+  border-radius: var(--border-radius);
   transition: bottom 1s ease-in-out, background-color .3s ease-in-out;
 
   &::before,
