--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,15 +3,19 @@
   --color-bg-2:   #222222;
   --color-txt:    #222222;
   --color-txt-2:  #F4EDE7;
-  --color-anchor: #0DAD7A;
+  --color-anchor: #A87D34;
   --color-border: #222222;
   --color-tint:   #6B543E;
 
-  --font-family: "Ubuntu", "Helvetica Neue", "Roboto", sans-serif;
-  --font-size: 18px;
+  --font-family: 'Ubuntu', sans-serif;
+  --font-size: 16px;
+  --font-weight-normal: 400;
+  --font-weight-bold: 500;
+  --font-weight-extra-bold: 700;
 
   --spacing: 10px;
   --shadow: 1px 1px 5px #222;
+  --border-radius: 0.1875em;
 }
 
 // Responsive widths.
