--- a/scss/site-header/_top-bar.scss
+++ b/scss/site-header/_top-bar.scss
@@ -6,7 +6,7 @@
   grid-gap: var(--spacing);
   align-items: center;
   padding: calc(var(--spacing) * 0.5) 0;
-  font-size: .7rem;
+  font-size: .8rem;
 
   > *:first-child {
     grid-column: 2;
@@ -29,6 +29,7 @@
 .top-bar-languages,
 .top-bar-links {
   display: grid;
+  grid-gap: var(--spacing);
 }
 
 .top-bar-languages {
@@ -53,6 +54,10 @@
   align-items: center;
 }
 
+.desmo2020-social a:not(:first-child) {
+  margin-left: calc(var(--spacing) * 0.25);
+}
+
 body.has-featured-image {
   .top-bar {
     position: relative;
@@ -68,7 +73,7 @@ body.has-featured-image {
   }
 
   .top-bar-links {
-    grid-template-columns: repeat(2, minmax(0, auto));
+    grid-template-columns: repeat(3, minmax(0, auto));
     grid-gap: var(--spacing);
   }
 }
