--- a/editor-style.css
+++ b/editor-style.css
@@ -4,24 +4,32 @@
 */
 /* Table of Contents
   -------------------------------
+  # Font
   # Variables
-  # Normalize
   # Elements
-  # Blocks
+  # Content
+    ## Media
+    ## Alignment
 */
+/* Font */
+@import url("https://fonts.googleapis.com/css?family=Ubuntu:400,400i,500,500i,700");
 /* Variables */
 :root {
   --color-bg:     #FFFFFF;
   --color-bg-2:   #222222;
   --color-txt:    #222222;
   --color-txt-2:  #F4EDE7;
-  --color-anchor: #0DAD7A;
+  --color-anchor: #A87D34;
   --color-border: #222222;
   --color-tint:   #6B543E;
-  --font-family: "Ubuntu", "Helvetica Neue", "Roboto", sans-serif;
-  --font-size: 18px;
+  --font-family: 'Ubuntu', sans-serif;
+  --font-size: 16px;
+  --font-weight-normal: 400;
+  --font-weight-bold: 500;
+  --font-weight-extra-bold: 700;
   --spacing: 10px;
   --shadow: 1px 1px 5px #222;
+  --border-radius: 0.1875em;
 }
 
 @media (min-width: 768px) {
@@ -90,347 +98,6 @@
   }
 }
 
-/* Normalize */
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-/**
- * Remove the margin in all browsers.
- */
-body {
-  margin: 0;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-/**
- * Remove the gray background on active links in IE 10.
- */
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-  /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-/**
- * Remove the border on images inside links in IE 10.
- */
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-button,
-input {
-  /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-button,
-select {
-  /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-[type="checkbox"],
-[type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-[type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-/**
- * Add the correct display in IE 10+.
- */
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-[hidden] {
-  display: none;
-}
-
-body {
-  margin: var(--spacing);
-}
-
 /* Elements */
 :root {
   font-size: var(--font-size);
@@ -441,7 +108,6 @@ body {
   color: var(--color-text);
   font-family: var(--font-family);
   word-wrap: break-word;
-  font-smooth: always;
 }
 
 /* Headings */
@@ -452,7 +118,7 @@ h4,
 h5,
 h6 {
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: var(--font-weight-bold);
 }
 
 h1 {
@@ -600,48 +266,199 @@ pre {
 @media only screen and (max-width: 768px) {
   table {
     display: inline-block;
-    overflow: hidden;
-    overflow-x: auto;
+    overflow: auto;
   }
 }
 
-/* Blocks */
-.wp-block-embed__wrapper,
-.wp-block-gallery {
-  overflow-x: auto;
+/* Elements: Media */
+.size-auto,
+.size-full,
+.size-large,
+.size-medium,
+.size-thumbnail,
+.alignnone,
+.wp-caption,
+img {
+  max-width: 100%;
+  height: auto;
 }
 
-.wp-block-cover,
-.wp-block-cover-text {
-  color: var(--color-txt-2);
+img {
+  vertical-align: bottom;
 }
 
-.wp-block-gallery {
-  margin-left: 0;
+.post-thumbnail {
+  display: grid;
+  -webkit-align-content: center;
+      -ms-flex-line-pack: center;
+          align-content: center;
+  width: 100%;
+  max-height: 400px;
+  overflow: hidden;
+  -webkit-border-radius: var(--border-radius);
+          border-radius: var(--border-radius);
 }
 
-.wp-block-button__link {
-  background-color: var(--color-anchor);
-  color: var(--color-txt-2);
-  -webkit-border-radius: 0.625em;
-          border-radius: 0.625em;
-  -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
+.post-thumbnail img {
+  width: 100%;
 }
 
-.wp-block-button__link:hover {
-  background-color: var(--color-bg-2);
+iframe,
+embed,
+object {
+  max-width: 100%;
 }
 
-.is-style-outline .wp-block-button__link {
-  background-color: transparent;
-  border-color: var(--color-anchor);
-  color: var(--color-anchor);
+.wp-caption,
+.gallery-item {
+  position: relative;
+  overflow: hidden;
+  -webkit-border-radius: var(--border-radius);
+          border-radius: var(--border-radius);
 }
 
-.is-style-outline .wp-block-button__link:hover {
-  background-color: transparent;
-  border-color: var(--color-bg-2);
-  color: var(--color-bg-2);
+.wp-caption-text {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #FFFFFF;
+  left: 0;
+  bottom: 0.5em;
+  font-size: 0.8rem;
+  padding: 0.5em;
+  max-width: 80%;
+  -webkit-border-top-right-radius: var(--border-radius);
+          border-top-right-radius: var(--border-radius);
+  -webkit-border-bottom-right-radius: var(--border-radius);
+          border-bottom-right-radius: var(--border-radius);
+}
+
+figure {
+  margin: 1em 0;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-gap: var(--spacing);
+  justify-items: start;
+}
+
+.gallery-columns-1 {
+  grid-template-columns: minmax(0, 1fr);
+}
+
+.gallery-item {
+  margin: 0;
+}
+
+@media (min-width: 768px) {
+  .gallery-columns-1 {
+    grid-template-columns: minmax(0, 1fr);
+  }
+  .gallery-columns-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .gallery-columns-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .gallery-columns-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+  .gallery-columns-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+  .gallery-columns-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+  .gallery-columns-7 {
+    grid-template-columns: repeat(7, minmax(0, 1fr));
+  }
+  .gallery-columns-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
+  .gallery-columns-9 {
+    grid-template-columns: repeat(9, minmax(0, 1fr));
+  }
+  .gallery-columns-10 {
+    grid-template-columns: repeat(10, minmax(0, 1fr));
+  }
+}
+
+.gallery br {
+  display: none;
+}
+
+.wp-caption dd,
+.gallery-item dd {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #FFFFFF;
+  left: 0;
+  bottom: 0.5em;
+  font-size: 0.8rem;
+  padding: 0.5em;
+  max-width: 80%;
+  -webkit-border-top-right-radius: var(--border-radius);
+          border-top-right-radius: var(--border-radius);
+  -webkit-border-bottom-right-radius: var(--border-radius);
+          border-bottom-right-radius: var(--border-radius);
+}
+
+.gallery .gallery-item {
+  float: none;
+  text-align: left;
+  padding: 0;
+}
+
+.gallery-columns-1 .gallery-item,
+.gallery-columns-2 .gallery-item,
+.gallery-columns-3 .gallery-item,
+.gallery-columns-4 .gallery-item,
+.gallery-columns-5 .gallery-item,
+.gallery-columns-6 .gallery-item,
+.gallery-columns-7 .gallery-item,
+.gallery-columns-8 .gallery-item,
+.gallery-columns-9 .gallery-item,
+.gallery-columns-10 .gallery-item {
+  width: auto;
+}
+
+/* Content: Alignment */
+.alignnone,
+.aligncenter,
+.alignleft,
+.alignright,
+.alignwide {
+  margin-top: var(--spacing);
+  margin-bottom: var(--spacing);
+}
+
+.alignright {
+  float: right;
+  margin: 0 0 1em 1em;
+}
+
+.alignleft {
+  float: left;
+  margin: 0 1em 1em 0;
+}
+
+.aligncenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Clear floats */
+section::after,
+article::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.page-links {
+  padding-top: -webkit-calc(var(--spacing) * 2);
+  padding-top: calc(var(--spacing) * 2);
+  clear: both;
 }
