--- a/scss/content/_footer.scss
+++ b/scss/content/_footer.scss
@@ -8,7 +8,7 @@
 .post-tags {
   span:first-child {
     font-size: .8rem;
-    font-weight: 500;
+    font-weight: var(--font-weight-bold);
     text-transform: uppercase;
   }  
 }
