--- a/scss/content/_header.scss
+++ b/scss/content/_header.scss
@@ -36,7 +36,7 @@
 
 .entry-meta {
   font-size: .8rem;
-  font-weight: 500;
+  font-weight: var(--font-weight-bold);
 }
 
 body.has-featured-image .entry-header {
