--- a/scss/content/_media.scss
+++ b/scss/content/_media.scss
@@ -14,6 +14,19 @@ img {
   vertical-align: bottom;
 }
 
+.post-thumbnail {
+  display: grid;
+  align-content: center;
+  width: 100%;
+  max-height: 400px;
+  overflow: hidden;
+  border-radius: var(--border-radius);
+
+  img {
+    width: 100%;
+  }
+}
+
 iframe,
 embed,
 object {
@@ -22,35 +35,22 @@ object {
 
 .wp-caption,
 .gallery-item {
-  font-size: .8rem;  
-}
-
-.wp-caption,
-.gallery-item {
-  background-color: #FFFFFF;
-  padding: calc(var(--spacing) * 0.5);
-  box-shadow: var(--shadow);
-  border-radius: .25em;
-
-  img {
-    position: relative;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-.wp-caption {
-  max-width: calc(100% - 1em);
+  position: relative;
+  overflow: hidden;
+  border-radius: var(--border-radius);
 }
 
 .wp-caption-text {
-  text-align: center;
-  font-style: italic;
-  font-weight: 500;
-  padding: calc(var(--spacing) * 0.5);
-  padding-bottom: 0;
-  color: #000000;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #FFFFFF;
+  left: 0;
+  bottom: 0.5em;
+  font-size: 0.8rem;
+  padding: 0.5em;
+  max-width: 80%;
+  border-top-right-radius: var(--border-radius);
+  border-bottom-right-radius: var(--border-radius);
 }
 
 figure {
@@ -59,9 +59,9 @@ figure {
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(2, minmax(0, auto));
-  grid-gap: 1em;
-  max-width: 1024px;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-gap: var(--spacing);
+  justify-items: start;
 }
 
 .gallery-columns-1 {
@@ -73,10 +73,6 @@ figure {
 }
 
 @media (min-width: $tablet) {
-  .gallery {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .gallery-columns-1 {
     grid-template-columns: minmax(0, 1fr);
   }
