--- a/scss/editor-style.scss
+++ b/scss/editor-style.scss
@@ -4,24 +4,68 @@
 */
 /* Table of Contents
   -------------------------------
+  # Font
   # Variables
-  # Normalize
   # Elements
-  # Blocks
+  # Content
+    ## Media
+    ## Alignment
 */
+
+/* Font */
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:400,400i,500,500i,700');
 
 /* Variables */
 @import "variables";
 
-/* Normalize */
-@import "normalize";
-
-body {
-  margin: var(--spacing);
-}
-
 /* Elements */
 @import "elements";
 
-/* Blocks */
-@import "content/blocks";
+/* Elements: Media */
+@import "content/media";
+
+.gallery {
+  br {
+    display: none;
+  }
+}
+
+.wp-caption,
+.gallery-item {
+  dd {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #FFFFFF;
+    left: 0;
+    bottom: 0.5em;
+    font-size: 0.8rem;
+    padding: 0.5em;
+    max-width: 80%;
+    border-top-right-radius: var(--border-radius);
+    border-bottom-right-radius: var(--border-radius);
+  }
+}
+
+.gallery .gallery-item {
+  float: none;
+  text-align: left;
+  padding: 0;
+}
+
+.gallery-columns-1,
+.gallery-columns-2,
+.gallery-columns-3,
+.gallery-columns-4,
+.gallery-columns-5,
+.gallery-columns-6,
+.gallery-columns-7,
+.gallery-columns-8,
+.gallery-columns-9,
+.gallery-columns-10 { 
+  .gallery-item {
+    width: auto;
+  }
+}
+
+/* Content: Alignment */
+@import "content/alignment";
