--- a/scss/site-header/_navigation.scss
+++ b/scss/site-header/_navigation.scss
@@ -141,7 +141,7 @@ body.home {
     bottom: auto;
     padding: 0;
     font-size: .9rem;
-    font-weight: 600;
+    font-weight: var(--font-weight-bold);
     visibility: visible;
     opacity: 1;
     overflow-y: visible;
@@ -158,6 +158,8 @@ body.home {
     > li > ul {
       background-color: var(--color-bg-2);
       grid-template-columns: minmax(200px, auto);
+      border-bottom-right-radius: var(--border-radius);
+      border-bottom-left-radius: var(--border-radius);
       position: absolute;
       left: -2.5em;
       font-weight: 500;
@@ -165,6 +167,10 @@ body.home {
       display: none;
       margin-top: 0px;
       z-index: 100;
+
+      a:hover {
+        color: var(--color-anchor);
+      }
     }
   }
 }
