--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -26,7 +26,7 @@ body.home main {
   right: 0;
   bottom: 0;
   left: 0;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   max-width: 100%;
   margin: 0;
