--- a/scss/editor-style.scss
+++ b/scss/editor-style.scss
@@ -34,15 +34,13 @@
 .gallery-item {
   dd {
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.6);
     color: #FFFFFF;
     left: 0;
-    bottom: 0.5em;
+    bottom: 0;
     font-size: 0.8rem;
-    padding: 0.5em;
-    max-width: 80%;
-    border-top-right-radius: var(--border-radius);
-    border-bottom-right-radius: var(--border-radius);
+    padding: 1em;
+    width: calc(100% - 2em);
   }
 }
 
