--- a/scss/site-header/_navigation.scss
+++ b/scss/site-header/_navigation.scss
@@ -43,6 +43,11 @@
   }
 }
 
+#site-header-nav-toggle:checked ~ #site-header-nav-toggle-label {
+  position: absolute;
+  top: var(--spacing)
+}
+
 #site-header-nav-toggle:checked ~ #site-header-nav-toggle-label span {
   left: 30px;
  
@@ -65,7 +70,6 @@
   position: fixed;
 }
 
-
 #site-header-nav {
   background-color: var(--color-bg-2);
   position: absolute;
@@ -73,7 +77,7 @@
   grid-template-columns: minmax(0, 100%);
   grid-gap: .5em;
   margin: 0;
-  padding: calc(30px + 3em) var(--spacing) var(--spacing);
+  padding: calc(30px + var(--spacing) * 2) var(--spacing);
   text-transform: uppercase;
   font-size: 1.5rem;
   width: calc(100% - var(--spacing) * 2);
